--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,15 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/knight.png
+    - assets/images/thief.png
+    - assets/images/wizard.png
+    - assets/images/trader.png
+    - assets/images/knight_attack.png
+    - assets/images/thief_attack.png
+    - assets/images/wizard_attack.png
+    - assets/images/trader_attack.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
