--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,9 +68,14 @@ flutter:
     - assets/images/thief_attack.png
     - assets/images/wizard_attack.png
     - assets/images/trader_attack.png
+#    - assets/images/brick.png
+#    - assets/images/ground.png
+    - assets/images/brick_tile.png
+    - assets/images/ground_tile.png
     - assets/maps/           # Add this line
     - assets/maps/level_1.json
     - assets/maps/level_2.json
+    - assets/maps/level_3.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
