--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,8 +68,8 @@ flutter:
     - assets/images/thief_attack.png
     - assets/images/wizard_attack.png
     - assets/images/trader_attack.png
-#    - assets/images/brick.png
-#    - assets/images/ground.png
+    - assets/images/brick.png
+    - assets/images/ground.png
     - assets/images/brick_tile.png
     - assets/images/ground_tile.png
     - assets/maps/           # Add this line
