--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   socket_io_client: ^2.0.3
   cupertino_icons: ^1.0.8
   gamepads: ^0.1.9
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
