--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ flutter:
     - assets/images/ground.png
     - assets/images/brick_tile.png
     - assets/images/ground_tile.png
+    - assets/images/dower_chest.png
+    - assets/images/dower_chest_opened.png
     - assets/maps/
     - assets/maps/level_1.json
     - assets/maps/level_2.json
