--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flame: ^1.17.0
   flame_forge2d: ^0.17.0
+  flame_audio: ^2.11.12
   socket_io_client: ^2.0.3
   cupertino_icons: ^1.0.8
   gamepads: ^0.1.9
