--- a/modules/ui/pubspec.yaml
+++ b/modules/ui/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
     path: ../core
   engine:
     path: ../engine
+  service:
+    path: ../service
 
 dev_dependencies:
   flutter_test:
